manifests/gitea/srv.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitea
  name: gitea
  namespace: gitea
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 0
  - name: ssh
    port: 22
    targetPort: 0
  selector:
    app: gitea
status:
  loadBalancer: {}
