manifests/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: gitea-block-openai-xai@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
  name: gitea-ingress
  namespace: gitea
spec:
  ingressClassName: traefik
  rules:
  - host: danicos.dev
    http:
      paths:
      - backend:
          service:
            name: gitea
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - danicos.dev
status:
  loadBalancer: {}
